--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.541.0",
-    "next": "15.5.0",
+    "next": "^14.2.0",
     "next-auth": "^4.24.11",
     "prisma": "^6.14.0",
     "react": "19.1.0",
@@ -31,7 +31,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.5.0",
+    "eslint-config-next": "^14.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
